# librarian

./: .gitignore  Cargo.toml  README.md  document_body
gomod_parser/: go.mod
src/: accountant.rs  crawler.rs  go_indexer.rs  gomod_parser.rs  helpers.rs  indexer.rs  main.rs  model.rs  parser.rs  post_proc.rs  save.rs  scheduler.rs
src/go_indexer/: parser.rs
src/go_indexer/parser/: go.mod  tests.rs
src/gomod_parser/: tests.rs
src/parser/: tests.rs
src/tests/: case_1.rs  go.mod  mod.rs
