[package]
name = "librarian"
version = "0.1.0"
authors = ["Boris Tatarintsev <btatarintsev@ozon.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
futures = "0.3.5"
url = "2.1.1"
log = "0.4.11"
simple_logger = "1.6.0"

[dependencies.async-std]
versio = "1.6.2"
features = ["attributes"]

[dependencies.surf]
version = "1.0.3"
features = ["native-client"]
