[package]
name = "librarian"
version = "0.1.0"
authors = ["Boris Tatarintsev <btatarintsev@ozon.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
futures = "0.3.5"
url = "2.1.1"
log = "0.4.11"
simple_logger = "1.9.0"
anyhow = "1.0.32"
async-trait = "0.1.40"
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
http = "0.2.1"
strip_markdown = "0.2.0"
config = "0.10.1"
lazy_static = "1.4.0"

[dependencies.async-std]
version = "1.6.3"
features = ["attributes"]

[dependencies.surf]
version = "1.0.3"
features = ["native-client"]
